k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-qdzujc8mwmykntl
  namespace: challenge-qdzujc8mwmykntl
spec:
  type: NodePort
  selector:
    app: challenge-qdzujc8mwmykntl
  ports:
  - port: 80
    targetPort: 80
